# QBitMPlayer

./: .gitignore  CMakeLists.txt  QBitMPlayer_es_MX.ts  README.md  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  player.cpp  player.hpp  resources.qrc
resources/: qbitmplayer.desktop  resources.qrc
resources/i18n/: QBitMPlayer_es_MX.qm  QBitMPlayer_es_MX.ts
src/: authenticator.cpp  authenticator.hpp  config.hpp.in  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  notifier.cpp  notifier.hpp  player.cpp  player.hpp  playlistchooser.cpp  playlistchooser.hpp  playlistchooser.ui  settings.cpp  settings.hpp  settings.ui  spotifymanager.cpp  spotifymanager.hpp  videoplayer.cpp  videoplayer.hpp
